--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Buscador de imágenes</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
